# enterprise-rag-eval-harness

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  render.yaml
.github/workflows/: eval.yml
data/raw/clinical_trials/: adverse_event_reporting.txt  data_monitoring_committee.txt  informed_consent_protocol.txt
data/raw/clinical_trials_synthetic/: clinical_trials_synthetic_benchmark_0001.txt  clinical_trials_synthetic_benchmark_0002.txt  clinical_trials_synthetic_benchmark_0003.txt  clinical_trials_synthetic_benchmark_0004.txt  clinical_trials_synthetic_benchmark_0005.txt  clinical_trials_synthetic_benchmark_0006.txt  clinical_trials_synthetic_benchmark_0007.txt  clinical_trials_synthetic_benchmark_0008.txt  clinical_trials_synthetic_benchmark_0009.txt  clinical_trials_synthetic_benchmark_0010.txt  clinical_trials_synthetic_benchmark_0011.txt  clinical_trials_synthetic_benchmark_0012.txt  clinical_trials_synthetic_benchmark_0013.txt  clinical_trials_synthetic_benchmark_0014.txt  (+320 more)
docs/: benchmark_corpus.md  dashboard.md  deployment.md  local_rag_baseline.md  operations_runbook.md  phase1_scope.md  phase2_retrieval.md  phase3_quality.md  phase4_operations.md  quality_controls.md  retrieval_architecture.md
scripts/: generate_benchmark_corpus.py
src/enterprise_rag_eval/: __init__.py  cli.py  config.py  generation.py  models.py  pipeline.py  server.py  text.py
tests/: test_evaluation.py  test_guardrails.py  test_ingestion.py  test_ragas_adapter.py  test_reranker.py  test_retrieval.py  test_server.py  test_tracking.py  test_vector_stores.py
(+695 files in other folders)
