[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-rag-eval-harness"
version = "0.1.0"
description = "Enterprise RAG evaluation harness for healthcare compliance documents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8.2,<9",
    "ruff>=0.5,<1",
]
pinecone = [
    "pinecone>=5,<6",
]
postgres = [
    "psycopg[binary]>=3.2,<4",
]
ragas = [
    "ragas>=0.2,<1",
    "datasets>=2.20,<4",
]
guardrails = [
    "guardrails-ai>=0.5,<1",
]

[project.scripts]
rag-harness = "enterprise_rag_eval.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
enterprise_rag_eval = ["frontend/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
